assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');

/*----------------------------------------Header/Navigation-------------------------------------- */

#logo img {
    width: 250px;
    border: none;
    position: absolute;
    left: 0;
    top: 0;
    margin: 10px
}

.navbar-toggler {
    margin: 10px;
    font-size: .8rem;
    text-align: right;
}

.navbar {
    min-height: 100px;
    z-index: 991;
    box-sizing: border-box;
}

.nav-link {
    position: relative;
    display: flex;
    flex-direction: column;
    font-size: 18px;
    font-family: "Holtwood One SC", sans-serif;
    margin-top: 20px;
    color: rgb(104, 110, 115);
    text-align: center;
    margin-left: 15px;
    padding-bottom: 0
}

/*Changed location of icon over menu items to remove the effect of dropping a few 
pix when hoverered over. Menu items and icons are now in a fixed position*/
.nav-item i {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 40px;
    line-height: 0;
    display: none;
}

.nav-item:hover i {
    display: block;
}

/*
I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html
*/
.current a i,
.current span {
    display: block;
    color: rgb(47, 49, 51)
}

 a, a:hover, a:focus, a:active {
      text-decoration: none;
      color: inherit;
 }
/*------------------------------------------------Footer----------------------------------------------- */

#footer-row {
    position: sticky;
    background-color: rgb(104, 110, 115);
    width: 100%;
    min-height: 70px;
    box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
}


#contact-details {
    font-family: "Roboto", sans-serif;
    color: white;
    margin-top: 10px;
    margin-left: 10px;
    display: block;
    position: relative;

}

#social-icons {
    font-size: 25px;
    margin-top: 15px;
    text-align: right;
    color: white;
    position: relative;

}

#social-icons i {
    margin-right: 10px;
}

#social-icons i:hover{
    color: #f5c2d4;
}

/* I initially went with a bootstrap button as I wanted to style t
he button with a responsive shadow/no shadow effect to
mimic the button being depressed. Below is the bootstrap CSS for their button
with my alterations to achieve the desired effect */


.call-button {
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: #f8f9fa;
    border-color: #f8f9fa;
    text-align: center;
    border: none;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    min-width: 180px;
    margin: 0;
    position: relative;
    top: 60%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
    padding: .375rem .75rem;
    font-size: 1rem;
    border-radius: .95rem;
}

.call-button:active {
    box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
}

button:focus {
    outline: 0;
}

button:hover{
    background-color: #f5c2d4;
}

.text-field .call-button {
    top: 100%;
}



/*----------------------------------------------Home Page --------------------------------------------*/

.parallax {
    background-image: url(../../assets/images/background.jpg);
    position: relative;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: block;

}

.home-container {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 100%;
    min-height: calc(100vh - 160px);
}

.main-message {
    color: white;
    position: relative;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 60px;
    text-align: center;
    font-size: 25px;
    padding: 2rem;
    width: 40%;
    margin:40px;
    box-sizing: border-box;
}

.main-message h1{
    color: #eeb251;

}

.main-message hr{
    border: 1px solid #eeb251;
    width: 40px;
}

.main-message i{
    color:#eeb251;
}
.home-container .spash-image {
    padding: 2px;
    width: 550px;
}

.text-field h1 {
    font-size: 1.8rem;
}

.main-message span {
    position: absolute;
    height: 38px;
    left: 50%;
    right: 50%;
    bottom: 0;
}

.home-container i {
    margin: 6px;
}

/*--------------------------------------------------Prices page----------------------------------------- */
#prices-banner {
    column-count: 3;
    text-align: left;
    margin-bottom: 150px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 60px;
    padding: 30px;
}

#prices-banner li {
    list-style-type: none;
    font-size: 20px;
}

#prices-banner .list-item {
    display: flex;
    justify-content: space-between;
}

/*Dog bone with "Prices" text */
.image-container {
    position: relative;
    align-items: center;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    width: 250px;
    text-align: center;
}

.image-container img {
    width: 100%
}

.image-container p {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
    font-size: 35px;
    font-family: "Holtwood One SC", sans-serif;
    color: dimgrey;
}

#prices-banner span:nth-child(2) {
    color: pink;
}

#prices-banner i {
    color: darkgray;
}


/*--------------------------------------------------- Gallery ---------------------------------------------*/
.gallery{
    position: relative;
    padding:40px;
}
/* ... */

